--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vue3-sfc-loader/dist/vue3-sfc-loader.js"></script>
     <script src="src/script.js"></script>
   </head>
-  <body>
+  <body style="padding-bottom:0; margin-bottom: 0;">
     <div id="app"></div>
     <script>
       
